k8_manifests/blue-green/ingress/backend-ingress.yml
apiVersion: networking.k8s.io/v1

kind: Ingress

metadata:
   name: "app-bg-ingress-backend"
   namespace: "prod-blue-green"
   annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
     

spec:
   ingressClassName: nginx

   rules:

#   host defined in etc/hosts as 192.168.49.2 prod-blue-green.internal

   - host: prod-blue-green.internal

     http:
       paths:

         - path: /api/(/|$)(.*) 
           pathType: ImplementationSpecific
           backend:
             service:
              name: "blue-green-backend-service"
              port: 
               number: 80
