k8_manifests/blue-green/ingress/frontend-ingress.yml
apiVersion: networking.k8s.io/v1

kind: Ingress

metadata:
  name: "app-bg-ingress-frontend"
  namespace: "prod-blue-green"

spec:

  ingressClassName: nginx

  rules: 
# - host: host-based routing can be used like localhost for local environment or as per the requirement.
#   host defined in etc/hosts as 192.168.49.2 prod-blue-green.internal

  - host: prod-blue-green.internal

# below is path based routing:
    http:
      paths:
# / path routes to frontend     
       - path: /
         pathType: Prefix
         backend:
           service:
            name: "blue-green-frontend-service"
            port: 
              number: 80
